add option "dateLocale"

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Git Blame W77",
   "description": "It is an extension for VS code, which can show git blame in editor and can run git gui blame.",
   "publisher": "W77",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "engines": {
     "vscode": "^1.75.0"
   },
@@ -42,6 +42,11 @@
           "type": ["string", "null"],
           "default": null,
           "description": "Specifies git blame URL e.g 'https://github.com/wojtek77/git-blame-w77/commit/${hash}'. When it is NULL (default) it tries to automatically find the URL. When there is an empty string it disables this functionality. This functionality degrades performance when rendering decorations."
+        },
+        "gitBlameW77.dateLocale": {
+          "type": ["string"],
+          "default": "",
+          "description": "Specifies locale for date e.g 'en-US'. More locales here https://www.w3schools.com/jsref/jsref_tolocalestring.asp or https://stackoverflow.com/questions/27939773/tolocaledatestring-short-format. When there is an empty string (default) then it take locale from system."
         }
       }
     },
