--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Git Blame W77",
   "description": "It is an extension for VS code, which can show git blame in editor and can run git gui blame.",
   "publisher": "W77",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "engines": {
     "vscode": "^1.75.0"
   },
@@ -47,6 +47,11 @@
           "type": ["string"],
           "default": "",
           "description": "Specifies locale for date e.g 'en-US'. More locales here https://www.w3schools.com/jsref/jsref_tolocalestring.asp or https://stackoverflow.com/questions/27939773/tolocaledatestring-short-format. When there is an empty string (default) then it take locale from system."
+        },
+        "gitBlameW77.decorationShowHash": {
+          "type": ["boolean"],
+          "default": true,
+          "description": "Specifies whether to show commit hash or not in decoration."
         }
       }
     },
