--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Git Blame W77",
   "description": "It is an extension for VS code, which can show git blame in editor and can run git gui blame.",
   "publisher": "W77",
-  "version": "1.6.3",
+  "version": "1.7.0",
   "engines": {
     "vscode": "^1.75.0"
   },
@@ -67,12 +67,12 @@
         "title": "Toggle Blame Decoration"
       },
       {
-        "command": "gitBlameW77.runGitGuiBlameForHash",
-        "title": "Run Git Gui Blame For Line (hash)"
+        "command": "gitBlameW77.runGitGuiBlameForFile",
+        "title": "Run Git Gui Blame"
       },
       {
-        "command": "gitBlameW77.runGitGuiBlameForFile",
-        "title": "Run Git Gui Blame For File"
+        "command": "gitBlameW77.runGitGuiBlameForHash",
+        "title": "Run Git Gui Blame For Line (by hash)"
       }
     ],
     "keybindings": [
@@ -81,12 +81,12 @@
         "key": "alt+b"
       },
       {
-        "command": "gitBlameW77.runGitGuiBlameForHash",
-        "key": "ctrl+alt+b"
-      },
-      {
         "command": "gitBlameW77.runGitGuiBlameForFile",
         "key": "ctrl+shift+b"
+      },
+      {
+        "command": "gitBlameW77.runGitGuiBlameForHash",
+        "key": "ctrl+alt+b"
       }
     ]
   },
