--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Git Blame W77",
   "description": "It is an extension for VS code, which can show git blame in editor and can run git gui blame.",
   "publisher": "W77",
-  "version": "1.7.1",
+  "version": "1.7.2",
   "engines": {
     "vscode": "^1.75.0"
   },
@@ -72,7 +72,7 @@
       },
       {
         "command": "gitBlameW77.runGitGuiBlameForHash",
-        "title": "Run Git Gui Blame For Line (by hash)"
+        "title": "Run Git Gui Blame For Line"
       }
     ],
     "keybindings": [
