--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Git Blame W77",
   "description": "It is an extension for VS code, which can show git blame in editor and can run git gui blame.",
   "publisher": "W77",
-  "version": "1.9.0",
+  "version": "1.9.1",
   "engines": {
     "vscode": "^1.75.0"
   },
@@ -67,7 +67,7 @@
         "gitBlameW77.hoverShowLinkToGitGuiBlame": {
           "type": ["boolean"],
           "default": true,
-          "description": "Specifies whether to show link to Git Gui Blame in hover of decoration."
+          "description": "Specifies whether to show link to Git Gui Blame in hover of decoration. This functionality degrades performance when rendering decorations."
         }
       }
     },
