--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Git Blame W77",
   "description": "It is an extension for VS code, which can show git blame in editor and can run git gui blame.",
   "publisher": "W77",
-  "version": "2.5.4",
+  "version": "2.5.5",
   "engines": {
     "vscode": "^1.75.0"
   },
@@ -98,10 +98,10 @@
           "default": true,
           "description": "Determines whether hover show in extension. If FALSE it speeds up decoration rendering a lot."
         },
-        "gitBlameW77.hoverShowLinkToGitGuiBlame": {
+        "gitBlameW77.showLinkToGitGuiBlame": {
           "type": ["boolean"],
           "default": true,
-          "description": "Specifies whether to show link to Git Gui Blame in hover of decoration. This functionality degrades performance when rendering decorations."
+          "description": "Specifies whether to show link to Git Gui Blame in hover of the decoration or the status bar. This functionality degrades performance when rendering the decoration."
         }
       }
     },
